--- a/styles.css
+++ b/styles.css
@@ -24,15 +24,66 @@ body {
     
 }
 
-.alarms {
+.alarmSection {
+    
     position: relative ;
     /* margin-left: 20%; */
     margin: auto;
     width: 300px;
     height: 500px;
-    border-radius: 10%;
     background-color: rgba(37, 28, 28, 0.5);
     border: 4px solid rgba(0, 0, 0 , 0.8);
+}
+
+.alarms {
+    position: absolute;
+    top: 14%;
+    left: 2.5%;
+    width: 95%;
+    height: 84%;
+    background-color: rgba(128, 128, 128,0.2);
+}
+
+
+#btn{
+    position: absolute;
+    left: 92%;
+    top: 2%;
+    transform: translateX(-50%);
+    background-color: rgba(194, 139, 36,0.8) ;
+    border: 2px solid black;
+    padding: 6px 8px 8px 8px;
+    font-weight: 700;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    transition: all 0.3s;
+}
+
+#btn:hover {
+    background-color: rgba(255, 166, 0,0.8);
+    border-radius: 30%;
+}
+
+#btn:active {
+    background-color: rgba(0, 0, 0 , 0.1);
+} 
+
+#heading {
+    position: absolute ;
+    margin: 0px;
+    left: 6%;
+    top: 3%;
+    color: rgb(112, 119, 109);
+    text-shadow: 4px 4px 8px black;
+}
+
+#line {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    transform: translateX(-50%);
+    left: 50%;
+    background-color: black;
+    top: 11%;
 }
 
 .clock .number {
