--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #283d47;
+    background: linear-gradient(to bottom, #669999 0%, #666699 100%);
     display: flex;
     /* justify-content: center; */
     
@@ -18,9 +18,9 @@ body {
     position: relative;
     width: 500px;
     height: 500px;
-    background-color: rgba(181, 114, 194, 0.65);
+    background-color: rgb(255, 255, 255);
     border-radius: 50%;
-    border: 4px solid black;
+    border: 8px solid black;
     
 }
 
@@ -31,7 +31,7 @@ body {
     margin: auto;
     width: 300px;
     height: 500px;
-    background-color: rgba(37, 28, 28, 0.5);
+    background-color: rgba(37, 28, 28, 0.8);
     border: 4px solid rgba(0, 0, 0 , 0.8);
 }
 
@@ -41,9 +41,48 @@ body {
     left: 2.5%;
     width: 95%;
     height: 84%;
+    border-radius: 2%;
     background-color: rgba(128, 128, 128,0.2);
+    
 }
 
+.alarm {
+    position: absolute;
+    background-color: rgb(68, 68, 68);
+    width: 97%;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 20%;
+    border-radius: 5%;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+    
+}
+.alarm1 {
+    top: 3%;
+}
+.alarm2 {
+    top: 27.25%;
+}
+
+.alarm3 {
+    top: 51.5%;
+}
+.alarm4 {
+    top: 75.75%;
+}
+
+.time {
+    position: absolute;
+    font-family: Oswald, sans-serif;
+    font-size: 35px;
+    margin: 0;
+    top: 50%;
+    left: 5%;
+    transform: translateY(-50%);
+    color: rgba(255, 255, 255,0.4);
+    text-shadow: 2px 2px 4px black;
+}
 
 #btn{
     position: absolute;
@@ -87,7 +126,7 @@ body {
 }
 
 .clock .number {
-    font-weight: 700;
+    font-weight: 500;
     --angle: 0 ;
     position: absolute;
     width: 100%;
@@ -119,7 +158,7 @@ body {
     transform-origin: bottom;
     
     z-index: 10;
-    border: 2px solid rgb(0, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color: black;
@@ -141,23 +180,23 @@ body {
 
 .clock .hand.second {
     --angle: 0 ;
-    width: 4px;
+    width: 5px;
     height: 45%;
-    background-color: rgb(201, 84, 84);
+    background-color: rgb(255, 153, 0);
 }
 
 .clock .hand.minute {
     --angle: 0 ;
-
+    border: 1px solid grey;
     width: 6px;
     height: 40%;
-    background-color: rgb(26, 56, 73);
+    background-color: black;
 }
 
 .clock .hand.hour {
     --angle: 0 ;
-
+    border: 2px solid grey;
     width: 8px;
-    height: 35%;
-    background-color: rgb(26, 56, 73);
+    height: 32%;
+    background-color: black;
 }
